correction in cell that checks all standard models

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -4147,18 +4147,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  File \"c:\\Users\\artur\\class_transactions\\class_transactions\\lib\\site-packages\\joblib\\externals\\loky\\backend\\context.py\", line 282, in _count_physical_cores\n",
-      "    raise ValueError(f\"found {cpu_count_physical} physical cores < 1\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x_input = df.drop(['Class'], axis=1)\n",
     "y_output = df['Class']\n",
@@ -4188,8 +4179,8 @@
     "    }\n",
     "\n",
     "    for train_index, val_index in kf.split(x_input, y=y_output):\n",
-    "        X_train_fold, X_val_fold = X_train.iloc[train_index], X_train.iloc[val_index]\n",
-    "        y_train_fold, y_val_fold = y_train.iloc[train_index], y_train.iloc[val_index]\n",
+    "        X_train_fold, X_val_fold = x_input.iloc[train_index], x_input.iloc[val_index]\n",
+    "        y_train_fold, y_val_fold = y_output.iloc[train_index], y_output.iloc[val_index]\n",
     "\n",
     "        mme = MinMaxScaler()\n",
     "\n",
